--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,11 @@ body {
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+    --chart-6: 210 40% 96.1%;
+    --chart-7: 30 90% 50%;
+    --chart-8: 300 76% 52%;
+    --chart-9: 250 62% 52%;
+    --chart-10: 160 60% 45%;
     --radius: 0.5rem;
     --sidebar-background: 0 0% 98%;
     --sidebar-foreground: 240 5.3% 26.1%;
@@ -67,6 +72,11 @@ body {
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+    --chart-6: 210 40% 96.1%;
+    --chart-7: 30 90% 50%;
+    --chart-8: 300 76% 52%;
+    --chart-9: 250 62% 52%;
+    --chart-10: 160 60% 45%;
     --sidebar-background: 250 14% 8%;
     --sidebar-foreground: 0 0% 98%;
     --sidebar-primary: 275 100% 42%;
