--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@ body {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
-    --card: 0 0% 95.3%;
+    --card: 0 0% 97%;
     --card-foreground: 222.2 84% 4.9%;
  
     --popover: 0 0% 100%;
@@ -33,7 +33,7 @@ body {
     --destructive-foreground: 210 40% 98%;
 
     --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
+    --input: 0 0% 97%;
     --ring: 222.2 84% 4.9%;
  
     --radius: 0.5rem;
@@ -45,6 +45,8 @@ body {
     --chart-5: 210 60% 75%;
     --header: 0 0% 97%;
     --header-foreground: 222.2 84% 4.9%;
+
+    --search-bar: 0, 0%, 77%, 1; /* #4D4D4D */
   }
  
   .dark {
@@ -72,6 +74,7 @@ body {
     --chart-3: 197 57% 64%;
     --chart-4: 27 87% 67%;
     --chart-5: 210 60% 75%;
+    --search-bar: 0, 0%, 77%, 1;
   }
 }
 
